feature: errormessage, reverse order, transaction title

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
       <input name="coffee-quantity" id="coffee-input" type="number" />
       <button type="submit">Köp</button>
     </form>
+    <p id="error-message"></p>
     <p id="total-spent"></p>
     <p id="member-status"></p>
+    <p id="discount-message"></p>
     <hr />
-    <h2>Dina transaktioner</h2>
+    <h2 id="transaction-title">Du har inga transaktioner</h2>
     <div id="transactions-container"></div>
     <script src="index.js"></script>
   </body>
