--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stylesheet.css"/>
-    <title>Document</title>
+    <link rel="stylesheet" href="stylesheet.css" />
+    <title>Coffee Shop</title>
   </head>
   <body>
     <form id="coffee-form">
@@ -17,7 +17,7 @@
     </form>
     <p id="error-message"></p>
     <p id="total-spent"></p>
-    <p id="member-status"></p> 
+    <p id="member-status"></p>
     <p id="discount-message"></p>
     <hr />
     <h2 id="transaction-title">Du har inga transaktioner</h2>
